Fixing up spacing issues.

--- a/css/impress-demo.css
+++ b/css/impress-demo.css
@@ -504,5 +504,5 @@ body     { pointer-events: none; }
 
 .step ul.col {
   float: left;
-  width: 32%;
+  width: 33%;
 }
